Get yunba.io work

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,10 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/query-object/query-object.js"></script>
+    <script src="lib/yunba-javascript-sdk/yunba-1.0.1.js"></script>
+    <script src="lib/socket.io.js"></script>
   </head>
   <body ng-app="starter">
     <!--
