Get users from server

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="lib/query-object/query-object.js"></script>
     <script src="lib/yunba-javascript-sdk/yunba-1.0.1.js"></script>
     <script src="lib/socket.io.js"></script>
+    <script src="lib/angular-resource/angular-resource.min.js"></script>
   </head>
   <body ng-app="starter">
     <!--
